[Events] added margin to fix overlapping navbar

--- a/styles/_events.scss
+++ b/styles/_events.scss
@@ -1,5 +1,6 @@
 .events {
 
+    margin-top: 30px;
     padding: 40px 0;
     width: 100%;
     overflow: hidden;
